--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Header & Navigation -->
+
+  <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
       <a href="#home" class="logo">JA MOSHA</a>
@@ -16,15 +17,15 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#products">Products</a></li>
-          <li><a href="#about">About Us</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- Hero Section -->
-  <section id="home" class="hero scroll-reveal">
+  <!-- Hero -->
+  <section id="home" class="hero">
     <div class="container hero-content">
       <h1>100% Natural Mosquito Repellent Incense Sticks</h1>
       <p>Experience purity and protection with every stick.</p>
@@ -32,15 +33,15 @@
     </div>
   </section>
 
-  <!-- Product Filter Buttons -->
+  <!-- Product Filters -->
   <div class="container filter-container">
     <button class="filter-btn" data-filter="all">All</button>
     <button class="filter-btn" data-filter="p1">P1</button>
     <button class="filter-btn" data-filter="p2">P2</button>
   </div>
 
-  <!-- Products Section -->
-  <section id="products" class="products scroll-reveal">
+  <!-- Products -->
+  <section id="products" class="products">
     <div class="container">
       <h2>Our Products</h2>
       <div class="product-grid">
@@ -60,36 +61,31 @@
     </div>
   </section>
 
-  <!-- About Section -->
-  <section id="about" class="about scroll-reveal">
+  <!-- About -->
+  <section id="about" class="about">
     <div class="container">
       <h2>About Us</h2>
       <p>JA MOSHA AGARBATTI brings you 100% natural incense sticks crafted from premium ingredients to provide safe and effective mosquito protection. Our mission is to blend tradition with innovation for a healthier home.</p>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="contact scroll-reveal">
+  <!-- Contact -->
+  <section id="contact" class="contact">
     <div class="container">
       <h2>Contact Us</h2>
       <form>
-        <input type="text" name="name" placeholder="Your Name" required /><br><br>
-        <input type="email" name="email" placeholder="Your Email" required /><br><br>
-        <input type="tel" name="phone" placeholder="Phone Number" required /><br><br>
-        <textarea name="message" placeholder="Your Message" required></textarea><br><br>
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <input type="tel" name="phone" placeholder="Phone Number" required />
+        <textarea name="message" placeholder="Your Message" required></textarea>
         <button type="submit" class="btn">Send</button>
       </form>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="site-footer scroll-reveal">
+  <footer class="site-footer">
     <div class="container">
-      <div class="social-links">
-        <a href="#">Facebook</a>
-        <a href="#">Instagram</a>
-        <a href="#">Twitter</a>
-      </div>
       <p>&copy; 2025 JA MOSHA AGARBATTI. All rights reserved.</p>
     </div>
   </footer>
